force-app/main/default/objects/Shipping_Item__c/Shipping_Item__c.object-meta.xml
<CustomObject>
    <label>Shipping Item</label>
    <nameField>
        <label>Shipping Item ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>