force-app/main/default/objects/Shipping_Item__c/fields/Amazon_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Shipping_Date__c</fullName>
    <label>Amazon Shipping Date</label>
    <type>DateTime</type>
</CustomField>