force-app/main/default/objects/Shipping_Item__c/fields/Amazon_Sku__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Sku__c</fullName>
    <label>Amazon Sku</label>
    <length>40</length>
    <type>Text</type>
</CustomField>