force-app/main/default/objects/Shipping_Item__c/fields/Fulfilled_By_Amazon__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_By_Amazon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fulfilled By Amazon</label>
    <type>Checkbox</type>
</CustomField>