force-app/main/default/objects/Shipping_Item__c/fields/Fulfillment_Errors__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Errors__c</fullName>
    <label>Fulfillment Errors</label>
    <type>TextArea</type>
</CustomField>