force-app/main/default/objects/Shipping_Item__c/fields/Fulfillment_Id__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Id__c</fullName>
    <label>Fulfillment Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>