force-app/main/default/objects/Shipping_Item__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Shipping_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>