force-app/main/default/objects/Shipping_Item__c/fields/Order_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Status__c</fullName>
    <formula>TEXT(Order_Product__r.SBQQ__Status__c)</formula>
    <label>Order Product Status</label>
    <type>Text</type>
</CustomField>