force-app/main/default/objects/Shipping_Item__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>