force-app/main/default/objects/Shipping_Item__c/fields/Ship_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ship To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Shipping_Items</relationshipName>
    <type>Lookup</type>
</CustomField>