force-app/main/default/objects/Shipping_Item__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Shipping Address</label>
    <referenceTo>Account_Address__c</referenceTo>
    <relationshipName>Shipping_Items</relationshipName>
    <type>Lookup</type>
</CustomField>