force-app/main/default/objects/Shipping_Item__c/fields/Shipping_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_Email__c</fullName>
    <formula>Ship_To_Contact__r.Email</formula>
    <label>Shipping Contact Email</label>
    <type>Text</type>
</CustomField>