force-app/main/default/objects/Shipping_Item__c/fields/Shipping_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_Name__c</fullName>
    <formula>Ship_To_Contact__r.FirstName + &apos; &apos; + Ship_To_Contact__r.LastName</formula>
    <label>Shipping Contact Name</label>
    <type>Text</type>
</CustomField>