force-app/main/default/objects/Shipping_Item__c/fields/Shipping_Courrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Courrier__c</fullName>
    <label>Shipping Courrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Canada Post</fullName>
            </value>
            <value>
                <fullName>Canpar</fullName>
            </value>
            <value>
                <fullName>Couriers Plus</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>Local Pickup</fullName>
            </value>
            <value>
                <fullName>OSS Supplier</fullName>
            </value>
            <value>
                <fullName>Purolator</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>