force-app/main/default/objects/Shipping_Item__c/fields/Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date__c</fullName>
    <label>Shipping Date</label>
    <type>DateTime</type>
</CustomField>