force-app/main/default/objects/Shipping_Item__c/fields/Shipping_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Notes__c</fullName>
    <label>Shipping Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>