force-app/main/default/objects/Shipping_Item__c/fields/Shipping_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Status__c</fullName>
    <label>Shipping Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>