force-app/main/default/objects/Shipping_Item__c/fields/Time_to_Ship__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Ship__c</fullName>
    <formula>(Shipping_Date__c - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Ship</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>