force-app/main/default/objects/Shipping_Item__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>