force-app/main/default/objects/Shipping_Item__c/fields/WooCommerce_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>WooCommerce_Order_Number__c</fullName>
    <label>WooCommerce Order Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>