force-app/main/default/objects/Shipping_Item__c/validationRules/Cannot_Change_Order_or_Order_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Order_or_Order_Product</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
OR(
ISCHANGED( Order__c ),
ISCHANGED( Order_Product__c )
)
)</errorConditionFormula>
    <errorMessage>Cannot change order or order product details</errorMessage>
</ValidationRule>