force-app/main/default/objects/Shipping_Item__c/validationRules/Cant_change_shipping_courrier.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_change_shipping_courrier</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Shipped__c,
NOT(Fulfilled_By_Amazon__c),
PRIORVALUE(Shipped__c),
OR(
ISCHANGED(Shipping_Courrier__c)
)
)</errorConditionFormula>
    <errorMessage>You cannot change the shipping courrier after item is shipped</errorMessage>
</ValidationRule>