force-app/main/default/objects/Shipping_Item__c/validationRules/Cant_change_tracking_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_change_tracking_number</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
Shipped__c , 
PRIORVALUE(Shipped__c), 
NOT(Fulfilled_By_Amazon__c),
ischanged(Tracking_Number__c ) 
)</errorConditionFormula>
    <errorMessage>You can&apos;t change tracking number after item is shipped.</errorMessage>
</ValidationRule>