force-app/main/default/objects/Shipping_Item__c/validationRules/Shipping_Fields_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Fields_Required</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
Shipped__c , 
ISPICKVAL(Shipping_Method__c, &apos;Standard Courier&apos;), 
NOT(ISPICKVAL(Shipping_Courrier__c,&apos;Amazon&apos;)),
NOT(ISPICKVAL(Shipping_Courrier__c,&apos;OSS Supplier&apos;)), 
OR( 
ISPICKVAL(Shipping_Courrier__c,&apos;&apos;), 
ISBLANK(Tracking_Number__c) 
)
)</errorConditionFormula>
    <errorMessage>Shipping courrier and tracking number required to mark shipped.</errorMessage>
</ValidationRule>