force-app/main/default/objects/Shipping_Item__c/validationRules/You_cant_set_shipped.validationRule-meta.xml
<ValidationRule>
    <fullName>You_cant_set_shipped</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Shipped__c,
PRIORVALUE(Shipped__c) == FALSE,
AND( 
$Profile.Name!= &apos;OSG Sys Admin&apos;, 
$User.Alias != &apos;THugh&apos;,
$User.Alias != &apos;slove&apos;,
$User.Alias != &apos;amccr&apos;,
$User.Alias != &apos;cwang&apos;,
$User.Alias != &apos;lcruz&apos;
)
)</errorConditionFormula>
    <errorMessage>You don&apos;t have the permission to ship physical goods.</errorMessage>
</ValidationRule>