force-app/main/default/objects/Shipping_Item__c/validationRules/You_Cant_Unship_An_Item.validationRule-meta.xml
<ValidationRule>
    <fullName>You_Cant_Unship_An_Item</fullName>
    <active>true</active>
    <errorConditionFormula>and(
not(Shipped__c),
PRIORVALUE(Shipped__c),
$Profile.Name!= &apos;OSG Sys Admin&apos;
)</errorConditionFormula>
    <errorMessage>You can&apos;t unship items!</errorMessage>
</ValidationRule>