force-app/main/default/objects/Shipping_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Product__c</columns>
    <columns>Product__c</columns>
    <columns>Shipping_Method__c</columns>
    <columns>Quantity__c</columns>
    <columns>Order_Product_Status__c</columns>
    <columns>Shipped__c</columns>
    <columns>Fulfillment_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>