force-app/main/default/objects/Shipping_Item__c/listViews/Fulfilled_By_Amazon.listView-meta.xml
<ListView>
    <fullName>Fulfilled_By_Amazon</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Shipping_Address__c</columns>
    <columns>Shipping_Date__c</columns>
    <columns>Time_to_Ship__c</columns>
    <columns>Estimated_Arrival_Date__c</columns>
    <columns>Shipping_Courrier__c</columns>
    <columns>Shipping_Status__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fulfilled_By_Amazon__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Fulfillment_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Fulfilled By Amazon</label>
</ListView>