force-app/main/default/objects/Shipping_Item__c/listViews/JHSC_Posters.listView-meta.xml
<ListView>
    <fullName>JHSC_Posters</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Shipping_Address__c</columns>
    <columns>Shipping_Courrier__c</columns>
    <columns>Fulfilled_By_Amazon__c</columns>
    <columns>Order_Product_Status__c</columns>
    <columns>Shipped__c</columns>
    <columns>Shipping_Method__c</columns>
    <columns>Time_to_Ship__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>JHSCP</value>
    </filters>
    <filters>
        <field>Order_Product_Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </filters>
    <label>JHSC Posters</label>
</ListView>