force-app/main/default/objects/Shipping_Item__c/listViews/Shipped.listView-meta.xml
<ListView>
    <fullName>Shipped</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Shipping_Address__c</columns>
    <columns>Ship_To_Contact__c</columns>
    <columns>Shipping_Date__c</columns>
    <columns>Shipping_Courrier__c</columns>
    <columns>Shipping_Cost__c</columns>
    <columns>Shipping_Method__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>Time_to_Ship__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Shipped__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Shipped</label>
</ListView>