force-app/main/default/objects/Shipping_Item__c/listViews/X2021_Greenbooks.listView-meta.xml
<ListView>
    <fullName>X2021_Greenbooks</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Quantity__c</columns>
    <columns>Shipping_Address__c</columns>
    <columns>Shipping_Method__c</columns>
    <columns>Ship_To_Contact__c</columns>
    <columns>Time_to_Ship__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>2021OOHSAR</value>
    </filters>
    <filters>
        <field>Order_Product_Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </filters>
    <label>2021 Greenbooks</label>
</ListView>